--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -7,7 +7,7 @@
     <br>
     <br>
     <form [formGroup]="bmxEditData">
-        <div style="display: flex;flex-direction: row;">
+        <div class="information-container" >
             <div>
                 <div class="row-field">
                     <label class="selectLabels">Salesboard</label>
@@ -48,15 +48,13 @@
                 </div>
                 <div class="row-field">
                     <label class="selectLabels">Closing date: </label>
-                    <div>
+                    
                         <mat-form-field appearance="outline" id="project-datepicker" style="width:84%">
                             <input matInput [matDatepicker]="picker" placeholder="Elija una fecha"
                                 (dateChange)="onSelect($event.value)">
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>
                         </mat-form-field>
-                    </div>
-
                 </div>
             </div>
             <div>
