--- a/src/app/bmx/components/project-information/project-information.component.scss
+++ b/src/app/bmx/components/project-information/project-information.component.scss
@@ -1,26 +1,46 @@
 .row-field {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-left: 96px;
-    align-items: baseline;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: 96px;
+  align-items: baseline;
+  gap: 5vh;
 }
 
-.directorInfo{
-    outline: none;
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-flex {
+  padding: 0 0.75em 0 0.75em;
+  margin-top: -0.25em;
+  position: relative;
+  width: 200px;
+}
+
+.directorInfo {
+  outline: none;
   box-shadow: none;
 }
 
-.directorInfo:focus{
-  box-shadow: revert ;
+.information-container {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.directorInfo:focus {
+  box-shadow: revert;
   outline: revert;
 }
 
-.optionButton{
+.optionButton {
   visibility: hidden;
 }
 
-.directorCard:hover > .optionButton { visibility: visible; }
+.directorCard:hover>.optionButton {
+  visibility: visible;
+}
+
+.selectLabels{
+  width: 100%;
+}
 
 table {
   width: 100%;
@@ -58,8 +78,8 @@ table {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
@@ -78,13 +98,20 @@ table {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 1203px){
+@media screen and (max-width: 1203px) {
   .row-field {
+    display: flex;
+    flex-direction: column;
+    margin-left: 96px;
+    align-items: baseline;
+    gap: 2px;
+  }
+  .information-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-left: 96px;
     align-items: baseline;
-}
-
+  }
+  
 }
