--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -5,8 +5,7 @@
 
 <div style="display: flex; margin: 0px;
     width: 100%;">
-    <div style="flex-direction: column;" class="bmx-page" [dragula]="(isMobile)?'TASKS':''"
-        (dragulaModelChange)="checkDragEvetn($event);" [(dragulaModel)]="bmxPages[currentPage].page">
+    <div style="flex-direction: column;" class="bmx-page">
         <div style="width: 100%;">
             &nbsp;
         </div>
