--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="showDialog"><app-survey-dialog (onConfirm)="confirmAction()" (onCancel)="closeDialog()"
-    [dialogText]="dialogText"></app-survey-dialog>
+        [dialogText]="dialogText"></app-survey-dialog>
 </div>
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
@@ -64,121 +64,127 @@
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag
-    style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: lightgrey 3px solid; overflow: auto;
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: lightgrey 3px solid; overflow: auto;
        max-height: 36rem;
     bottom: -2; ">
 
-<div class="example-handle" cdkDragHandle style="cursor: move; height: 15px; width: 100%;"><svg width="24px" fill="currentColor" viewBox="0 0 24 24">
-    <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
-    <path d="M0 0h24v24H0z" fill="none"></path>
-  </svg></div>
-     <!-- Cards Criteria-->
-     <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Criteria</mat-card-title>
-      </mat-card-header>
-      <br>
-      <div class="sm-section2-rkScale" >
-        <div class="sm-column-box-rkScale">
-          <mat-form-field appearance="outline" style="width: 40%">
-            <mat-label>Category Name</mat-label>
-            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name" style="font-size: 20px;color: #324395;">
-            <mat-hint>Enter the name of the category</mat-hint> <!-- Hint text for Category Name -->
-          </mat-form-field>
+    <div class="example-handle" cdkDragHandle style="cursor: move; height: 15px; width: 100%;"><svg width="24px"
+            fill="currentColor" viewBox="0 0 24 24">
+            <path
+                d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
+            </path>
+            <path d="M0 0h24v24H0z" fill="none"></path>
+        </svg></div>
+    <!-- Cards Criteria-->
+    <mat-card class="example-card">
+        <mat-card-header>
+            <mat-card-title>Criteria</mat-card-title>
+        </mat-card-header>
+        <br>
+        <div class="sm-section2-rkScale">
+            <div class="sm-column-box-rkScale">
+                <mat-form-field appearance="outline" style="width: 40%">
+                    <mat-label>Category Name</mat-label>
+                    <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
+                        style="font-size: 20px;color: #324395;">
+                    <mat-hint>Enter the name of the category</mat-hint> <!-- Hint text for Category Name -->
+                </mat-form-field>
 
-          <mat-form-field appearance="outline" style="width: 40%">
-            <mat-label>Category Description</mat-label>
-            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName"
-            [value]="bmxItem.componentSettings[0].categoryName"placeholder="Category Description" style="font-size: 20px;color: #ee7f25;">
-            <mat-hint>Add a category to the left side</mat-hint> <!-- Hint text for Category Description -->
-          </mat-form-field>
+                <mat-form-field appearance="outline" style="width: 40%">
+                    <mat-label>Category Description</mat-label>
+                    <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName"
+                        [value]="bmxItem.componentSettings[0].categoryName" placeholder="Category Description"
+                        style="font-size: 20px;color: #ee7f25;">
+                    <mat-hint>Add a category to the left side</mat-hint> <!-- Hint text for Category Description -->
+                </mat-form-field>
+            </div>
+            <br>
+
+
         </div>
-<br>
+        <mat-card-content>
 
-
-      </div>
-      <mat-card-content>
-
-      </mat-card-content>
+        </mat-card-content>
 
     </mat-card>
-<br>
+    <br>
     <!-- Cards Test Name-->
     <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Test Name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <div style="text-align: center;">
-          <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
-          <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-      </div>
-      <div style="display: flex; justify-content: center; align-items: center;">
-        <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
-          <mat-label>Copy & Paste TEST NAMES</mat-label>
-          <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
-              placeholder="Paste test names here" cdkTextareaAutosize
-              cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
-          <mat-hint>Type or paste the test names here that you want to include</mat-hint>
-        </mat-form-field>
-      </div>
+        <mat-card-header>
+            <mat-card-title>Test Name</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div style="text-align: center;">
+                <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
+                <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
+            </div>
+            <div style="display: flex; justify-content: center; align-items: center;">
+                <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
+                    <mat-label>Copy & Paste TEST NAMES</mat-label>
+                    <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
+                        placeholder="Paste test names here" cdkTextareaAutosize cdkAutosizeMinRows="2"
+                        cdkAutosizeMaxRows="5"></textarea>
+                    <mat-hint>Type or paste the test names here that you want to include</mat-hint>
+                </mat-form-field>
+            </div>
 
-      </mat-card-content>
+        </mat-card-content>
 
     </mat-card>
-<br>
+    <br>
 
-   <!-- Cards Select Ranking-->
+    <!-- Cards Select Ranking-->
     <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Select Ranking</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <div class="sm-section3-rkScale">
+        <mat-card-header>
+            <mat-card-title>Select Ranking</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="sm-section3-rkScale">
 
 
 
-          <div class="sm-row-box-rkScale">
-          <div>
-              <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
-              <br>
-              <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                  {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
-                      max="10">
-                  10 <br>
-              </div>
-              <label for="volume">{{rankingScaleValue}}</label>
+                <div class="sm-row-box-rkScale">
+                    <div>
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
+                        <br>
+                        <div
+                            style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
+                            {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume"
+                                name="volume" min="0" max="10">
+                            10 <br>
+                        </div>
+                        <label for="volume">{{rankingScaleValue}}</label>
 
-          </div>
-          <div style="    margin-top: 0.5rem;
+                    </div>
+                    <div style="    margin-top: 0.5rem;
         ">
-               <div style="display: flex; flex-direction: column">
-                <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
-                <mat-checkbox #showIcon [(ngModel)]="showNeutralIcon">Add Neutral Button</mat-checkbox>
-                <mat-checkbox #changePreference (click)="changePreferenceScore()" [(ngModel)]="ranking">Preference
-                    Score</mat-checkbox>
-            </div>
-          </div>
+                        <div style="display: flex; flex-direction: column">
+                            <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+                            <mat-checkbox #showIcon [(ngModel)]="showNeutralIcon">Add Neutral Button</mat-checkbox>
+                            <mat-checkbox #changePreference (click)="changePreferenceScore()"
+                                [(ngModel)]="ranking">Preference
+                                Score</mat-checkbox>
+                        </div>
+                    </div>
 
-          </div>
-          </div>
-      </mat-card-content>
+                </div>
+            </div>
+        </mat-card-content>
 
     </mat-card>
 
     <!-- BUTTON-->
     <div class="sm-row-box-rkScale">
-      <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
-          aria-label="ranking">
-          <mat-icon>cancel</mat-icon><br>Cancel
-      </button>
-      <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
-          (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
-          aria-label="ranking">
-          <mat-icon>check_circle</mat-icon><br> Done
-      </button>
-  </div>
+        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
+            aria-label="ranking">
+            <mat-icon>cancel</mat-icon><br>Cancel
+        </button>
+        <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
+            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
+            aria-label="ranking">
+            <mat-icon>check_circle</mat-icon><br> Done
+        </button>
+    </div>
 </div>
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 
