button save manager

--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -139,8 +139,8 @@
                     matTooltipPosition="above" (click)="createCustomDirector()">
                     <mat-icon class="full-icon" style="color: white;">highlight_alt</mat-icon>
                 </button>
+                <button mat-raised-button color="success" style="background-color:#063074;color: white;" (click)="saveProjectInfo()">Save </button>
             </div>
-
         </div>
     </form>
 
@@ -198,12 +198,9 @@
                 </div>
 
             </mat-card>
-
-
         </div>
     </div>
 
-    <button mat-raised-button color="success" style="position: absolute;right: 40px;
-    top: 650px; background-color:#063074;color: white;" (click)="saveProjectInfo()">Save</button>
+   
     <br>
     <br>
