--- a/src/app/bmx/components/project-information/project-information.component.scss
+++ b/src/app/bmx/components/project-information/project-information.component.scss
@@ -11,7 +11,7 @@
   padding: 0 0.75em 0 0.75em;
   margin-top: -0.25em;
   position: relative;
-  width: 200px;
+  width: 100%;
 }
 
 .directorInfo {
