--- a/src/app/bmx/components/project-information/project-information.component.scss
+++ b/src/app/bmx/components/project-information/project-information.component.scss
@@ -39,7 +39,7 @@
 }
 
 .selectLabels{
-  width: 100%;
+  // width: 100%;
 }
 
 table {
@@ -113,5 +113,5 @@ table {
     margin-left: 96px;
     align-items: baseline;
   }
-  
+
 }
