--- a/src/app/bmx/components/respondents/respondents.component.html
+++ b/src/app/bmx/components/respondents/respondents.component.html
@@ -42,7 +42,7 @@
         <br>
         <br>
         <!-- MAKE YOUR TABLE BELOW THIS IS SAMPLE TABLE -->
-        <div>
+        <div style="margin-left: 1.4rem;">
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                 <!-- Position Column -->
                 <ng-container matColumnDef="FirstName">
