--- a/src/app/bmx/components/menu/menu.component.scss
+++ b/src/app/bmx/components/menu/menu.component.scss
@@ -46,7 +46,10 @@ width: 87%!important;
   width: 100%;
   cursor: pointer;
   transition: background-color 0.3s;
-  justify-content: space-between;
+  justify-content:space-between;
+}
+.directionProjectList{
+  justify-content: flex-start !important;
 }
 .menu-item-Dark {
   padding: 23px 20px;
