--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -258,7 +258,7 @@
                             <mat-form-field style="flex: 1; width: 100%;" appearance="outline">
                                 <mat-label>New Criteria</mat-label>
                                 <input matInput [(ngModel)]="newCriteria" style="font-size: 12px;">
-                                <mat-hint>Enter a criterion and click add</mat-hint> <!-- Hint for New Criteria -->
+                                <mat-hint>Enter a criteria  and click add</mat-hint> <!-- Hint for New Criteria -->
                             </mat-form-field>
                             <mat-icon style="cursor: pointer; font-size: 33px; color: #324395;"
                                 (click)="addCriteria(newCriteria); newCriteria=''">add_box</mat-icon>
