--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -165,7 +165,7 @@
     <!-- Cards Criteria-->
     <mat-card class="example-card">
         <mat-card-header>
-            <mat-card-title>Criteria</mat-card-title>
+            <mat-card-title>Category</mat-card-title>
         </mat-card-header>
         <br>
         <div class="sm-section2-rkScale">
@@ -221,7 +221,7 @@
     <!-- Cards Test Name-->
     <mat-card class="example-card">
         <mat-card-header>
-            <mat-card-title>Test Name</mat-card-title>
+            <mat-card-title>Test Names</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <div style="text-align: center;">
@@ -246,7 +246,7 @@
     <!-- Cards Select Ranking-->
     <mat-card class="example-card">
         <mat-card-header>
-            <mat-card-title>Select Ranking</mat-card-title>
+            <mat-card-title>Select Ranking & Criteria</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <div class="sm-section3-rkScale">
