--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -190,7 +190,7 @@
      <!-- Cards Criteria-->
      <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>Criteria</mat-card-title>
+        <mat-card-title>Category</mat-card-title>
       </mat-card-header>
       <br>
       <div class="section2" >
@@ -238,7 +238,7 @@
     <!-- Cards Test Name-->
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>Test Name</mat-card-title>
+        <mat-card-title>Test Names</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div style="text-align: center;">
@@ -263,7 +263,7 @@
    <!-- Cards Select Ranking-->
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>Select Ranking</mat-card-title>
+        <mat-card-title>Select Ranking & Criteria</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div class="section3">
@@ -415,7 +415,7 @@
     <!-- Cards Test Name-->
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>Test Name</mat-card-title>
+        <mat-card-title>Test Names</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div style="text-align: center;">
