--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -111,7 +111,7 @@
     <!-- Cards Test Name-->
     <mat-card class="example-card">
         <mat-card-header>
-            <mat-card-title>Test Name</mat-card-title>
+            <mat-card-title>Test Names</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <div style="text-align: center;">
