--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -253,7 +253,7 @@
 
                 <div class="sm-column-box-rkScale" style="gap: 4rem;">
                     <div style="display: flex; flex-direction: column; width: 40%;">
-                        <div style="font-size: 12px; color: #48535e;">TYPE NEW CRITERIA</div>
+                        <div style="font-size: 12px; color: #48535e;">CREATE NEW CRITERIA</div>
                         <div style="display: flex;">
                             <mat-form-field style="flex: 1; width: 100%;" appearance="outline">
                                 <mat-label>New Criteria</mat-label>
