--- a/src/app/bmx/components/project-reports/project-reports.component.html
+++ b/src/app/bmx/components/project-reports/project-reports.component.html
@@ -1,3 +1,5 @@
+<app-project-list-check *ngIf="showListDialog" (modal)="showDialog()"></app-project-list-check>
+
 <div *ngIf="true" class="feature-modal-box">
   <mat-card class="flex-column ">
     <mat-icon style="font-size: 35px;color: #032c72; animation: fadeIn 0.6s ease-in-out 0.3s backwards;">
@@ -52,7 +54,7 @@
       <div style="display:flex;flex-direction: column;justify-content: center;align-items: center; width: 100%;">
         <h3><span style="font-weight: bold; width: 100%;">SELECT RESPONDENTS</span></h3>
         <app-docx-survey style="width: 100%;" [reportSettings]="reportSettings"
-          [isMenuActive5]="true"></app-docx-survey>
+          [isMenuActive5]="true" (dialog)="showDialog()"></app-docx-survey>
       </div>
     </mat-card-content>
   </mat-card>
