Modal show only similar projects

--- a/src/app/bmx/components/project-reports/project-reports.component.html
+++ b/src/app/bmx/components/project-reports/project-reports.component.html
@@ -1,5 +1,5 @@
-<app-project-list-check *ngIf="showListDialog" (modal)="showDialog()" (projectsToCombineReports)="getReports($event)"></app-project-list-check>
-
+<app-project-list-check *ngIf="showListDialog" (modal)="showDialog()" (projectsToCombineReports)="getReports($event)" [projectName]="projectId"></app-project-list-check>
+  
 <div *ngIf="true" class="feature-modal-box">
   <mat-card class="flex-column ">
     <mat-icon style="font-size: 35px;color: #032c72; animation: fadeIn 0.6s ease-in-out 0.3s backwards;">
