--- a/src/app/bmx/components/project-list-check/project-list-check.component.html
+++ b/src/app/bmx/components/project-list-check/project-list-check.component.html
@@ -1,5 +1,8 @@
 <div class="modal-background"></div>
 <div class="modal-content">
+    <button mat-icon-button class="close-button" aria-label="Close" (click)="close()">
+        <mat-icon>close</mat-icon>
+    </button>
     <div style="width: 100%; display: flex; align-items: flex-start; justify-content: center; overflow-x: auto;">
         <div style="width: 75%;">
             <div style="display: flex;justify-content: space-between; margin-top: 20px;">
