Changed aspect ratio

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -173,7 +173,7 @@
 
       <!-- PRESENTATION MENU-->
       <div *ngIf="!createPostIt" fxLayoutAlign="center center" class="col">
-        <div class="slide-box mat-elevation-z12" [style.background]="slideBackground">
+        <div class="slide-box mat-elevation-z12" [style.background]="slideBackground" st>
 
 
           <mat-toolbar class="toolbar mat-elevation-z4 bounceIn" *ngIf="false">
