--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -70,18 +70,25 @@
   // height: 700px;
   // max-width: 2000px;
   // max-height: 800px;
-  width: 968px;
+  aspect-ratio: 16/9;
   height: 727px;
   border: solid 4px lightgray;
   border-radius: 6px;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
   position: relative;
   top: 70px;
   right: -26px;
   overflow: hidden;
   opacity: 1;
+  
   // animation: flip .5s ease 0.1s forwards;
+}
+
+.slide-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .toolbar {
