part of report merging

--- a/src/app/bmx/components/docx-survey/docx-survey.component.html
+++ b/src/app/bmx/components/docx-survey/docx-survey.component.html
@@ -47,7 +47,7 @@
         </button>
 
         <button mat-raised-button style="background-color: #003180;color:white;margin: 5px 20px 0 20px;" (click)="openProjectList()">
-            Combine Repors
+            Combine Reports
         </button >
     </div>
 
