--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -43,11 +43,9 @@
           style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;margin-top: 10px;">
           Welcome {{userFullName}}
           <br>
-          Role: {{userRole}}
+          Role: {{userRole}} <span style="font-size: 10px;">v 1.0.0</span>
         </div>
-
       </div>
-
     </div>
     <div class="movil">
 
