--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -66,11 +66,7 @@
   // max-width: 2000px !important;
 }
 .slide-box {
-  // width: 2000px;
-  // height: 700px;
-  // max-width: 2000px;
-  // max-height: 800px;
-  aspect-ratio: 16/9;
+  width: 900px;
   height: 727px;
   border: solid 4px lightgray;
   border-radius: 6px;
@@ -81,10 +77,24 @@
   right: -26px;
   overflow: hidden;
   opacity: 1;
-  
-  // animation: flip .5s ease 0.1s forwards;
 }
 
+.slide-box-wide {
+  width: 1600px; /* Set the desired width */
+  height: 727px; /* Keep the height the same as in the original class */
+  border: solid 4px lightgray;
+  border-radius: 6px;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  position: relative;
+  top: 70px;
+  right: -26px;
+  overflow: hidden;
+  opacity: 1;
+}
+.flexible-item-wide-screen {
+
+}
 .slide-box img {
   width: 100%;
   height: 100%;
