Fixed arrow in wide screen

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -19,7 +19,7 @@
         </button>
       </div>
 
-      <button (click)="moveBackward()" class="menu-left-icon" disableRipple mat-icon-button color="red">
+      <button (click)="moveBackward()" [class.menu-left-icon]="!wideView" [class.menu-left-icon-wide]="wideView"  disableRipple mat-icon-button color="red">
         <mat-icon>keyboard_arrow_left</mat-icon>
       </button>
 
@@ -499,7 +499,7 @@
 
     </div>
 
-    <button (click)="moveForward()" class="menu-right-icon" disableRipple mat-icon-button color="red">
+    <button (click)="moveForward()" [class.menu-right-icon]="!wideView" [class.menu-right-icon-wide]="wideView"  disableRipple mat-icon-button color="red">
       <mat-icon>keyboard_arrow_right</mat-icon>
     </button>
 
